plugins {
    id 'java'
    id 'net.neoforged.moddev' version '2.0.80'
    id 'idea'
}

version = mod_version
group = mod_group_id

repositories {
    gradlePluginPortal()
    mavenCentral()
    mavenLocal()
    maven { url = "https://jm.gserv.me/repository/maven-public/" }
    maven { url = "https://cursemaven.com" }

    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }

    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate

    maven {
        name = 'BlameJared'
        url = 'https://maven.blamejared.com'
    }

    maven {
        name = "RyanHCode Maven"
        url = "https://maven.ryanhcode.dev/releases"
    }

    maven {
        name = "Illusivec4"
        url = "https://maven.theillusivec4.top/"
    } // Curios

    maven {
        url 'https://api.modrinth.com/maven'
        content { includeGroup 'maven.modrinth' }
    }

    maven {
        url "https://maven.squiddev.cc"
        content {
            includeGroup("cc.tweaked")
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

configurations {
    sqliteRuntime
}
tasks.withType(JavaExec).configureEach {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()
            jvmArguments.addAll(
                    '--add-opens=java.base/java.lang=ALL-UNNAMED',
                    '--add-opens=java.base/java.util=ALL-UNNAMED'
            )
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    compileOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    localRuntime("com.simibubi.create:create-${minecraft_version}:${create_version}") { transitive = false }
    compileOnly("cc.tweaked:cc-tweaked-${minecraft_version}-common-api:${cc_tweaked_version}")
    compileOnly("cc.tweaked:cc-tweaked-${minecraft_version}-core-api:${cc_tweaked_version}")
    compileOnly("cc.tweaked:cc-tweaked-${minecraft_version}-forge-api:${cc_tweaked_version}")
    localRuntime("cc.tweaked:cc-tweaked-${minecraft_version}-forge:${cc_tweaked_version}")
    compileOnly("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
    localRuntime("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    localRuntime("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    compileOnly("com.tterrag.registrate:Registrate:${registrate_version}")
    localRuntime("com.tterrag.registrate:Registrate:${registrate_version}")

    //Sable
    compileOnly("foundry.veil:veil-neoforge-${project.minecraft_version}:${project.veil_version}") {
        exclude group: "maven.modrinth"
    }
    localRuntime("foundry.veil:veil-neoforge-${project.minecraft_version}:${project.veil_version}")
    compileOnly("dev.ryanhcode.sable:sable-neoforge-${minecraft_version}:${sable_version}") {
        exclude group: "foundry.veil"
    }
    localRuntime("dev.ryanhcode.sable:sable-neoforge-${minecraft_version}:${sable_version}")

    //Simulated
    compileOnly("dev.simulated_team.simulated:simulated-neoforge-${minecraft_version}:${simulated_version}")
    localRuntime("dev.simulated_team.simulated:simulated-neoforge-${minecraft_version}:${simulated_version}")

    //offroad
    compileOnly("dev.ryanhcode.offroad:offroad-neoforge-${minecraft_version}:${offroad_version}")
    localRuntime("dev.ryanhcode.offroad:offroad-neoforge-${minecraft_version}:${offroad_version}")

    //Aeronautics
    compileOnly("dev.eriksonn.aeronautics:aeronautics-neoforge-${minecraft_version}:${aeronautics_version}")
    localRuntime("dev.eriksonn.aeronautics:aeronautics-neoforge-${minecraft_version}:${aeronautics_version}")

    sqliteRuntime 'org.xerial:sqlite-jdbc:3.45.1.0'
    jarJar('org.xerial:sqlite-jdbc') {
        version {
            strictly '[3.45.0.0, 3.50.0.0)'
            prefer '3.45.1.0'
        }
    }

    jarJar(api("dev.ryanhcode.sable-companion:sable-companion-common-${minecraft_version}:${sable_companion_version}"))

    implementation files('libs/jadapter-for-native-tts-fixed.jar')
    jarJar(files('libs/jadapter-for-native-tts-fixed.jar'))
}

tasks.named('processResources') {
    dependsOn extractFreeTTS
}

tasks.named('classes') {
    dependsOn extractFreeTTS
}

tasks.register('extractFreeTTS', Copy) {
    from {
        fileTree('libs').filter {
            it.name.contains('freetts') ||
                    it.name.contains('cmu') ||
                    it.name.contains('en_us')
        }.collect { zipTree(it) }
    }
    into layout.buildDirectory.dir('classes/java/main')
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    exclude 'META-INF/**'
}

tasks.named('compileJava') {
    dependsOn extractFreeTTS
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

tasks.register('fixJAdapterManifest', Jar) {
    from zipTree(file('libs/jadapter-for-native-tts-0.12.0.jar'))
    manifest {
        attributes 'Automatic-Module-Name': 'io.github.jonelo.jadapternativetts'
    }
    archiveFileName = 'jadapter-for-native-tts-fixed.jar'
    destinationDirectory = file('libs')
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
